apps/transmission/envs/production/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
spec:
  template:
    spec:
      containers:
        - name: transmission
